fix createPost Account and do login
