# validates/admin/auth.validates.js
@@ -1,13 +1,14 @@
-module.exports.loginPost = async (req, res, next) => {
-  if (!req.body.email) {
-    req.flash("error", `Vui lòng nhập email`);
-    res.redirect("back");
-    return;
+module.exports.validateLogin = (req, res, next) => {
+  const { email, password } = req.body;
+  console.log("email:", email);
+  console.log("password:", password);
+
+  if (!email) {
+    return res.status(400).json({ error: "Vui lòng nhập email" });
   }
-  if (!req.body.password) {
-    req.flash("error", `Vui lòng nhập password`);
-    res.redirect("back");
-    return;
+  if (!password) {
+    return res.status(400).json({ error: "Vui lòng nhập mật khẩu" });
   }
-  next();
+
+  next(); // Nếu hợp lệ, chuyển tiếp đến controller xử lý đăng nhập
 };
